<resources>
    <string name="app_name">House Rental Management</string>
    <string name="title_app">House Rental Management</string>
    <string name="owner_dashboard">Owner Dashboard</string>
    <string name="todo">TODO</string>
    <string name="enter_house_id">Enter House Id</string>
    <string name="enter_exact_house_location">Enter Exact House Location</string>
    <string name="enter_total_no_of_room">Enter Total no. of Room</string>
    <string name="enter_rent_per_room">Enter Rent Per Room</string>
    <string name="add_house">Add House</string>
    <string name="enter_about_house_detail_and_facilities_available_in_house_like_ac_washing_machine_kitchen_etc">Enter about house detail and Facilities Available in house like AC, washing machine, kitchen etc</string>
    <string name="to">TODO</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No</string>
    <string name="id">Id</string>
    <string name="user_name">User Name</string>
    <string name="enter_joining_date">Enter Joining Date</string>
    <string name="enter_member_job">Enter Member Job</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="add_member">Add Member</string>
    <string name="enter_member_rent">Enter Member Rent</string>
    <string name="add_membe">Add Member</string>
    <string name="tod">TODO</string>
    <string name="i">Id</string>
    <string name="user_nam">User Name</string>
    <string name="house_details">House Details</string>
    <string name="todoo">TODO</string>
    <string name="view_member">View Member</string>
    <string name="call">Call</string>
    <string name="this_is_description_for_testing_purpose">This is description for testing purpose</string>
    <string name="view_location">View Location</string>
    <string name="message">Message</string>
    <string name="todooo">TODO</string>
    <string name="enter_email">Enter Email</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="provide_your_email_and_password_to_login">Provide your Email and Password to Login</string>
    <string name="password">Password</string>
    <string name="todi">TODO</string>
    <string name="emaill">Email</string>
    <string name="loginn">Login</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="register">Register</string>
    <string name="forgot_your_passwordd">Forgot your Password?</string>
    <string name="joining_date_29_01_2023">Joining Date : 29/01/2023</string>
    <string name="age_21">Age : 21</string>
    <string name="name_aqib_saeed">Name : Aqib Saeed</string>
    <string name="job_android_developer">Job: Android Developer</string>
    <string name="admin_panel">Admin Panel</string>
</resources>