<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.HouseDetails">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="0dp"
        android:background="@color/background2">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/house_details"
                android:textColor="#1A1C1C"
                android:textSize="30sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:id="@+id/ll_foodLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:gravity="center"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/iv_houseImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:paddingTop="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/logo"
                android:contentDescription="@string/todoo" />

            <LinearLayout
                android:id="@+id/ll_usernameCSE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_houseImage"
                android:orientation="vertical"
                android:paddingBottom="28dp">

                <TextView
                    android:id="@+id/tv_houseDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/this_is_description_for_testing_purpose"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />



                <Button
                    android:id="@+id/btn_viewMember"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/bg_rounded_input_field"
                    android:text="@string/view_member"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn_viewLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="20dp"
                    android:background="@drawable/bg_rounded_input_field"
                    android:text="@string/view_location"
                    android:visibility="gone"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_call"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="@drawable/bg_rounded_input_field"
            android:text="@string/call"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="@drawable/bg_rounded_input_field"
            android:text="@string/message"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>


</RelativeLayout>