<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="8dp"
    tools:context=".houseOwner.AddMember">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="0dp"
        android:background="@color/background2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/add_membe"
                android:textColor="#202527"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/et_memberName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:hint="Enter Name"
        android:minHeight="48dp"
        android:inputType="text"
        android:textColor="@color/textColor"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_memberJob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_memberName"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/enter_member_job"
        android:minHeight="48dp"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/et_memberAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_memberJob"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:hint="Enter Member age"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="@color/textColor"
        android:textColorHint="#757575"
        android:textSize="16sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/et_memberRent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_memberAge"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/enter_member_rent"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/et_memberJoiningDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_memberRent"
        android:layout_marginLeft="20dp"

        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/enter_joining_date"
        android:minHeight="48dp"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/et_memberPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_memberJoiningDate"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/enter_phone_number"
        android:minHeight="48dp"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_addMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_memberPhoneNumber"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp"
        android:text="@string/add_member"
        android:textAllCaps="false"
        android:textColor="@color/textColor"
        android:textSize="16sp" />

</RelativeLayout>