<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="0dp"
    android:padding="10dp"
    app:cardBackgroundColor="@color/colorAccent"
    android:background="@color/colorAccent"
    android:layout_margin="10dp"
    android:elevation="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="6dp"
        android:padding="3dp"
        android:background="@color/colorAccent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="120dp"
            android:id="@+id/img"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:scaleType="fitCenter"
            android:layout_height="150dp"
            android:src="@drawable/feedbacklogo"
            android:contentDescription="@string/tod" />
        <LinearLayout
            android:layout_marginStart="13dp"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="170dp"
                    android:textAlignment="textStart"
                    android:layout_height="wrap_content"
                    android:id="@+id/name"
                    android:text="@string/user_nam"
                    android:textColor="#000"
                    android:textSize="16sp"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/i"
                    android:maxLines="1"
                    android:textColor="#000"
                    android:paddingStart="10dp"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>