<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:backgroundTint="#F5F8FB"
        android:elevation="5dp"
        android:padding="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:weightSum="2"
                android:baselineAligned="false"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_memberName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:padding="5dp"
                        android:text="@string/name_aqib_saeed"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tv_memberPhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:padding="5dp"
                        android:text="Phone Number : 03116124245"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/tv_memberJoiningDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:padding="5dp"
                        android:text="@string/joining_date_29_01_2023"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tv_memberAge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:padding="5dp"
                        android:text="@string/age_21"
                        android:textColor="@color/black"
                        android:textSize="15dp"
                        tools:ignore="TextSizeCheck" />

                    <TextView
                        android:id="@+id/tv_memberJob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:padding="5dp"
                        android:text="Job: Android Developer"
                        android:textColor="@color/black"
                        android:textSize="15dp"
                        tools:ignore="HardcodedText,TextSizeCheck" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>